--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body{
-  background-color: #0093E9;
-  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  background-image: linear-gradient(160deg, #73c7f7 0%, #80D0C7 100%);
 }
 
 #root{
@@ -11,4 +10,10 @@ body{
 
 #root .mainPage{
   flex-grow: 1;
+}
+
+.sectionForm{
+  background-color: #123e57;
+  max-width: 650px;
+  min-height: 600px;
 }
