--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,61 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body{
   background-image: linear-gradient(160deg, #73c7f7 0%, #80D0C7 100%);
 }
 
-#root{
-  min-height: 100vh;
+#root {
   display: flex;
   flex-direction: column;
-}
-
-#root .mainPage{
-  flex-grow: 1;
+  min-height: 100vh;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .sectionForm{
-  background-color: #123e57;
-  max-width: 650px;
-  min-height: 600px;
+  width: 100%;
+  height: 400px;
+}
+
+.sectionList{
+  width: 100%;
+  min-height: 400px;
+}
+
+.nameTask{
+  width: 100%;
+  overflow: hidden;
+}
+
+.nameTask p{
+  width: 100%;
+  word-wrap: break-word;
+}
+
+.mainSection {
+  flex-grow: 1;
+}
+
+.textarea{
+  resize: none;
+  height: 100px;
+}
+
+@media all and (min-width:768px){
+  .nameTask{
+    width: 600px;
+  }
+}
+
+@media all and (min-width:768px){
+  .sectionForm{
+    width: 700px;
+    height: 400px;
+  }
+  
+  .sectionList{
+    width: 800px;
+    min-height: 400px;
+  }
 }
